fixed styling for moving words in intro to only show three with no extra space

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,7 @@
   position: relative;
 }
 
+/* .about-section{
+  height: 50vh;
+
+} */
