--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,4 @@
-/* .about{
-
-} */
+.about{
+  background-color: lightblue;
+  height: 50vh;
+}
