--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,7 +1,7 @@
 
 .intro{
     display: flex; 
-    height: 90vh;
+    height: 80vh;
 }
 
 .i-left{
@@ -37,23 +37,23 @@
 
 .i-title-wrapper{
     height: 100%;
-    animation: move 10s ease-in-out infinite alternate;
+    animation: move 6s ease-in-out infinite alternate;
 }
 
 @keyframes move {
-    33%{
+    50%{
         transform: translateY(-50px);
     }
-    67%{
+    100%{
         transform: translateY(-100px);
     }
-    100%{
+    /* 100%{
         transform: translateY(-150px);
-    }
+    } */
 }
 
 .i-title-item{
-    /* height: 50px; */
+    height: 50px;
     font-size: 30px;
     font-weight: bold;
     color: white;
